@@ -33,6 +33,7 @@ Version 1.5 (X/X/2011)
  Encryption
   * Made it easier to delete a fingerprint. (Aleksei Gorny) (#1654)
   * The "Generate" button is now labelled "Regenerate" when a fingerprint already exists. (Tyler Funnell) (#1128)
+  * Disable Encryption -> Initiate Encrypted OTR Chat, menu item, if encrypted chat is disabled from settings. (Tyler Funnell) (#7389)
 
  Events and Notifications
   * Added the ability to add timestamps to Growl notifications. (Stuart Connolly) (#9920)
